fix spacing issues for phone display

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 300px;
+  height: 400px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -8,7 +8,9 @@
   .fangear {
     display: flex;
     color: red !important;
+    align-items: center;
     justify-content: center;
+    // flex-direction: row;
     a {
       color: red !important;
       text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
